--- a/app/src/main/res/layout/fragment_search_.xml
+++ b/app/src/main/res/layout/fragment_search_.xml
@@ -28,22 +28,23 @@
 
             <TextView
                 android:id="@+id/toolbar_title"
+                android:fontFamily="@font/montserrat_regular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textAppearance="@style/headline"
                 android:textColor="@color/iris"
-                android:textSize="18sp"
+                android:textSize="@dimen/search_title_text_size"
                 android:textStyle="bold"
                 app:titleCentered="true" />
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:src="@drawable/bw_stockphoto3"
                 app:shapeAppearanceOverlay="@style/Circular"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
                 android:id="@+id/toolbar_profile_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="@dimen/search_shape_layout_width"
+                android:layout_height="@dimen/search_shape_layout_height"
                 android:layout_gravity="end|center_vertical"
                 android:layout_marginEnd="16dp"
                 />
@@ -53,8 +54,8 @@
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_margin="8dp"
+            android:layout_height="@dimen/search_search_height"
+            android:layout_margin="@dimen/search_search_margin"
             android:background="@color/light_white"
             android:focusable="false"
             app:layout_constraintBottom_toTopOf="@+id/search_recyclerView"
@@ -64,12 +65,12 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/search_recyclerView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="@dimen/search_recyclerview_layout_width"
+            android:layout_height="@dimen/search_recyclerview_layout_height"
+            android:layout_marginTop="@dimen/search_recyclerview_margin_top"
+            android:layout_marginBottom="@dimen/search_recyclerview_margin_bottom"
             android:clipToPadding="false"
-            android:padding="8dp"
+            android:padding="@dimen/search_recyclerview_padding"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
