--- a/app/src/main/res/layout/activity_login1.xml
+++ b/app/src/main/res/layout/activity_login1.xml
@@ -6,13 +6,13 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="406dp"
-        android:layout_height="496dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/activity_login1_material_layout_height"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:orientation="vertical"
-        android:padding="24dp"
-        android:paddingTop="16dp"
+        android:padding="@dimen/activity_login1_padding"
+        android:paddingTop="@dimen/activity_login1_padding_top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="132dp"
+            android:layout_marginBottom="@dimen/activity_login1_material_layout_margin_bottom"
             android:src="@drawable/movie_icon"  />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -31,8 +31,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_username"
+            android:fontFamily="@font/montserrat_regular"
             app:helperText=""
-            app:helperTextTextColor="#FF0000">
+            app:helperTextTextColor="@color/alert_red">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_user_edit_text"
@@ -46,10 +47,11 @@
             android:id="@+id/password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
             android:hint="@string/hint_password"
             app:errorEnabled="true"
             app:helperText=""
-            app:helperTextTextColor="#FF0000"
+            app:helperTextTextColor="@color/alert_red"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -70,11 +72,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
+                android:layout_marginEnd="@dimen/activity_login1_material_layout_margin_end"
+                android:layout_marginRight="@dimen/activity_login1_material_layout_margin_right"
                 android:layout_toStartOf="@id/login_button"
                 android:layout_toLeftOf="@id/login_button"
                 android:backgroundTint="@color/iris"
+                android:fontFamily="@font/montserrat_regular"
                 android:text="@string/button_login" />
 
             <com.google.android.material.button.MaterialButton
@@ -82,11 +85,12 @@
                 style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
+                android:layout_marginEnd="@dimen/activity_login1_material_layout_margin_end"
+                android:layout_marginRight="@dimen/activity_login1_material_layout_margin_right"
                 android:layout_toStartOf="@id/login_button"
                 android:layout_toLeftOf="@id/login_button"
                 android:textColor="@color/iris"
+                android:fontFamily="@font/montserrat_regular"
                 android:text="@string/button_signup" />
 
         </LinearLayout>
