--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -19,49 +19,41 @@
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/activity_detail_layout_margin"
             app:cardCornerRadius="8dp">
 
             <ImageView
                 android:id="@+id/posterImageView"
                 android:layout_width="match_parent"
-                android:layout_height="375dp"
+                android:layout_height="@dimen/activity_detail_layout_height"
                 android:imageUrl="@{movie.poster_path}"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
                 android:src="@drawable/atc_spiderverse" />
         </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tv_detailTitle"
+            android:fontFamily="@font/montserrat_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:padding="@dimen/activity_detail_padding"
             android:text="@{movie.title}"
             android:textColor="@color/dark_grey"
-            android:textSize="32sp"
+            android:textSize="@dimen/activity_detail_title_text_size"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_detailVoterAverage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="8dp"
-            android:text="@{movie.voteAverage.toString()}"
-            android:textColor="@color/dark_grey"
-            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_detailOverview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="8dp"
+            android:paddingStart="@dimen/activity_detail_padding_start"
+            android:paddingEnd="@dimen/activity_detail_padding_end"
+            android:fontFamily="@font/montserrat_regular"
+            android:paddingBottom="@dimen/activity_detail_padding_bottom"
             android:text="@{movie.overview}"
             android:textColor="@color/dark_grey"
-            android:textSize="24sp" />
+            android:textSize="@dimen/activity_detail_detail_text_size" />
 
     </LinearLayout>
 
