--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -14,11 +14,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/users_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="@dimen/dp_0"
+            android:layout_marginTop="@dimen/dp_8"
             android:clipToPadding="false"
             android:background="@color/light_white"
-            android:padding="8dp"
+            android:padding="@dimen/dp_8"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
