--- a/app/src/main/res/layout/item_add.xml
+++ b/app/src/main/res/layout/item_add.xml
@@ -26,21 +26,22 @@
                 android:layout_alignParentStart="true"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="1dp">
+                android:padding="@dimen/dp_1">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:padding="5dp"
+                    android:layout_width="@dimen/image_layout_width_margin"
+                    android:layout_height="@dimen/image_layout_height_margin"
+                    android:padding="@dimen/image_padding"
                     android:src="@drawable/ic_person_2" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="Bio"
+                    android:layout_margin="@dimen/dp_5"
+                    android:text="@string/bio"
+                    android:fontFamily="@font/montserrat_regular"
                     android:textColor="@color/dark_grey"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/sp_16"
                     android:textStyle="bold|normal" />
 
             </LinearLayout>
@@ -54,18 +55,19 @@
                 android:padding="1dp">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:padding="5dp"
+                    android:layout_width="@dimen/image_layout_width_margin"
+                    android:layout_height="@dimen/image_layout_height_margin"
+                    android:padding="@dimen/image_padding"
                     android:src="@drawable/ic_add_circle" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="Update Info"
+                    android:layout_margin="@dimen/dp_5"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:text="@string/update_info"
                     android:textColor="@color/iris"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/image_text_size"
                     android:textStyle="bold|normal" />
 
             </LinearLayout>
@@ -76,21 +78,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:padding="2dp"
-                android:layout_marginStart="5dp"
+                android:padding="@dimen/location_image_padding"
+                android:layout_marginStart="@dimen/location_image_margin_start"
                 android:src="@drawable/ic_person_location"
-                android:layout_width="25dp"
-                android:layout_height="25dp"/>
+                android:layout_width="@dimen/location_image_width"
+                android:layout_height="@dimen/location_image_height"/>
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:text="New York, USA"
-                    android:textSize="17sp"
+                    android:text="@string/new_york_usa"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="@dimen/location_image_text_size"
                     android:textColor="@color/dark_grey"
-                    android:textStyle="bold"
                     android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
