--- a/app/src/main/res/layout/item_email.xml
+++ b/app/src/main/res/layout/item_email.xml
@@ -4,10 +4,10 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="10dp"
+    app:cardCornerRadius="@dimen/dp_15"
+    app:cardElevation="@dimen/dp_10"
     app:cardUseCompatPadding="true"
-    card_view:cardCornerRadius="5dp">
+    card_view:cardCornerRadius="@dimen/dp_5">
 
     <LinearLayout
         android:orientation="vertical"
@@ -15,22 +15,23 @@
         android:layout_height="wrap_content">
         <LinearLayout
             android:orientation="horizontal"
-            android:padding="3dp"
+            android:padding="@dimen/dp_3"
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:padding="2dp"
+                android:padding="@dimen/dp_2"
                 android:src="@drawable/ic_email"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
+                android:layout_width="@dimen/dp_30"
+                android:layout_height="@dimen/dp_30"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="@dimen/dp_10"
                 android:layout_gravity="center"
-                android:text="Email"
-                android:textSize="14sp"
+                android:text="@string/email_item"
+                android:fontFamily="@font/montserrat_bold"
+                android:textSize="@dimen/sp_14"
                 android:textStyle="bold"
                 android:textColor="@color/dark_grey"
                 />
@@ -40,13 +41,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="info@Email.com"
-            android:textSize="18sp"
-            android:layout_marginStart="25dp"
-            android:layout_marginBottom="15dp"
-            android:textStyle="bold"
+            android:text="@string/info_email_com"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="@dimen/sp_18"
+            android:layout_marginStart="@dimen/dp_25"
+            android:layout_marginBottom="@dimen/dp_15"
             android:textColor="@color/dark_grey"
-
             >
 
         </TextView>
