--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
+                android:fontFamily="@font/montserrat_regular"
                 android:text="Mobile"
                 android:textColor="@color/dark_grey"
                 android:textSize="14sp"
@@ -45,11 +46,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginBottom="15dp"
+            android:fontFamily="@font/montserrat_bold"
             android:text="1234567890"
             android:textColor="@color/dark_grey"
             android:textSize="18sp"
-            android:textStyle="bold"
-
             >
 
         </TextView>
