--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,9 +17,11 @@
         <item name="android:textColor">#1C1B1F</item>
     </style>
 
-    <style name="PlantTheme" parent="Theme.Material3.Light.NoActionBar">
+    <style name="Theme.MovieProject" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/off_white</item>
+        <item name="android:fontFamily">@font/montserrat_bold</item>
+        <item name="android:textColor">@color/iris</item>
+        <item name="android:textSize">@dimen/sp_18</item>
     </style>
 
     <style name="icon_text">
@@ -27,4 +29,6 @@
         <item name="android:letterSpacing">0.04</item>
         <item name="android:textColor">#49454F</item>
     </style>
+
+
 </resources>
