--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,13 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="movie"
-            type="com.example.movie_project.models.MovieModel" />
-    </data>
-
 
     <ScrollView
         android:layout_width="match_parent"
@@ -31,22 +24,22 @@
                     android:id="@+id/toolbar_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat_regular"
                     android:layout_gravity="center"
-                    android:textAppearance="@style/headline"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textAppearance="@style/Theme.Movie_Project"
                     android:textColor="@color/iris"
                     android:textSize="18sp"
                     app:titleCentered="true" />
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/toolbar_profile_image"
-                    android:src="@drawable/bw_stockphoto3"
-                    app:shapeAppearanceOverlay="@style/Circular"
-                    android:scaleType="centerCrop"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="end|center_vertical"
-                    android:layout_marginEnd="16dp" />
+                    android:layout_marginEnd="16dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/bw_stockphoto3"
+                    app:shapeAppearanceOverlay="@style/Circular" />
             </com.google.android.material.appbar.MaterialToolbar>
 
             <androidx.cardview.widget.CardView
@@ -60,8 +53,8 @@
                     android:id="@+id/detailImageView"
                     android:layout_width="match_parent"
                     android:layout_height="500dp"
-                    android:padding="0dp"
                     android:adjustViewBounds="true"
+                    android:padding="0dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/movie_placeholder" />
             </androidx.cardview.widget.CardView>
@@ -71,29 +64,38 @@
                 android:id="@+id/tv_title_detail_activity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="@dimen/dp_8"
                 android:textColor="@color/dark_grey"
-                android:textSize="16sp"
+                android:textSize="@dimen/sp_16"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tv_release_date_detail_activity"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:textColor="@color/dark_grey"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/heartButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_gravity="end"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:contentDescription="Favorite Button"
-                android:src="@drawable/heart_button" />
+                <TextView
+                    android:id="@+id/tv_release_date_detail_activity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="@dimen/dp_8"
+                    android:textColor="@color/dark_grey"
+                    android:textSize="@dimen/sp_16"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/heartButton"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:contentDescription="Favorite Button"
+                    android:src="@drawable/heart_button" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_overview_detail_activity"
