--- a/app/src/main/res/layout/activity_login1.xml
+++ b/app/src/main/res/layout/activity_login1.xml
@@ -20,11 +20,11 @@
 
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp_150"
+            android:layout_height="@dimen/dp_150"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/activity_login1_material_layout_margin_bottom"
-            android:src="@drawable/movie_icon"  />
+            android:src="@drawable/movie_majic_app_logo"  />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/login_username_container"
