--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="title">
         <item name="android:textSize">20sp</item>
         <item name="android:letterSpacing">0.01</item>
-        <item name="android:textColor">#1C1B1F</item>
+        <item name="android:textColor">@color/dark_grey</item>
     </style>
 
     <style name="subtitle">
         <item name="android:textSize">12sp</item>
         <item name="android:letterSpacing">0.04</item>
-        <item name="android:textColor">#1C1B1F</item>
+        <item name="android:textColor">@color/dark_grey</item>
     </style>
 
     <style name="headline">
         <item name="android:textSize">36sp</item>
-        <item name="android:textColor">#1C1B1F</item>
+        <item name="android:textColor">@color/dark_grey</item>
     </style>
 
-    <style name="Theme.MovieProject" parent="Theme.Material3.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/montserrat_bold</item>
         <item name="android:textColor">@color/iris</item>
         <item name="android:textSize">@dimen/sp_18</item>
+        <item name="android:windowBackground">@color/light_white</item>
+        <item name="android:colorAccent">@color/colorAccent</item>
+    </style>
+
+
+    <style name="detail_title">
+        <!-- Customize your theme here. -->
+        <item name="android:fontFamily">@font/montserrat_bold</item>
+        <item name="android:textColor">@color/dark_grey</item>
+        <item name="android:textSize">@dimen/sp_16</item>
+        <item name="android:padding">@dimen/dp_8</item>
     </style>
 
     <style name="icon_text">
@@ -29,6 +41,8 @@
         <item name="android:letterSpacing">0.04</item>
         <item name="android:textColor">#49454F</item>
     </style>
+
+
 
 
 </resources>
